// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tool Card component Tests ToolCard After Project Loaded 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <span>
    home.overview.tool_card.current_tool
     
    <a
      onClick={[Function]}
    >
      home.overview.tool_card.change_tool
    </a>
  </span>
  <div
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "background": "var(--background-color-light)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
         0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Roboto, sans-serif",
        "marginTop": "5px",
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "zIndex": 1,
      }
    }
  >
    <div
      style={
        Object {
          "paddingBottom": 8,
        }
      }
    >
      <div
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 14,
            "muiPrepared": true,
            "padding": 16,
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "justifyContent": "space-between",
              "margin": "-10px 0 -24px 0",
            }
          }
        >
          <div
            style={
              Object {
                "color": "lightgray",
                "height": "110px",
                "margin": "-6px 20px 0 -16px",
                "overflow": "hidden",
                "width": "100px",
              }
            }
          >
            <span
              className="glyphicon glyphicon-check"
              style={
                Object {
                  "fontSize": "120px",
                  "margin": "-10px 0 0 -25px",
                }
              }
            />
          </div>
          <div
            style={
              Object {
                "width": "400px",
              }
            }
          >
            <strong
              style={
                Object {
                  "fontSize": "x-large",
                }
              }
            >
              Current Tool Title
            </strong>
            <ToolCardProgress
              progress={0.5}
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tool Card component Tests ToolCard Before Project Loaded 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <span>
    home.overview.tool_card.current_tool
     
    <a />
  </span>
  <div
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "background": "var(--background-color-light)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
         0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Roboto, sans-serif",
        "marginTop": "5px",
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "zIndex": 1,
      }
    }
  >
    <div
      style={
        Object {
          "paddingBottom": 8,
        }
      }
    >
      <div
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 14,
            "muiPrepared": true,
            "padding": 16,
          }
        }
      >
        <div
          style={
            Object {
              "paddingBottom": "0px",
              "textAlign": "center",
            }
          }
        >
          home.overview.select_tool
          <br />
          <button
            className="btn-prime"
            disabled={true}
            onClick={[Function]}
            style={
              Object {
                "marginBottom": "0",
              }
            }
          >
            home.overview.tool_card.tool
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tool Card component Tests ToolCard Before Project Loaded 2`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
>
  <span>
    home.overview.tool_card.current_tool
     
    <a />
  </span>
  <div
    style={
      Object {
        "WebkitTapHighlightColor": "rgba(0,0,0,0)",
        "background": "var(--background-color-light)",
        "backgroundColor": "#ffffff",
        "borderRadius": 2,
        "boxShadow": "0 1px 6px rgba(0, 0, 0, 0.12),
         0 1px 4px rgba(0, 0, 0, 0.12)",
        "boxSizing": "border-box",
        "color": "rgba(0, 0, 0, 0.87)",
        "fontFamily": "Roboto, sans-serif",
        "marginTop": "5px",
        "muiPrepared": true,
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "zIndex": 1,
      }
    }
  >
    <div
      style={
        Object {
          "paddingBottom": 8,
        }
      }
    >
      <div
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "fontSize": 14,
            "muiPrepared": true,
            "padding": 16,
          }
        }
      >
        <div
          style={
            Object {
              "paddingBottom": "0px",
              "textAlign": "center",
            }
          }
        >
          home.overview.select_tool
          <br />
          <button
            className="btn-prime"
            disabled={true}
            onClick={[Function]}
            style={
              Object {
                "marginBottom": "0",
              }
            }
          >
            home.overview.tool_card.tool
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
